Added Third Person Character Added Blackboard Added Behavour tree Added selector and move to nodes in the Behavour tree

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,5 @@ ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6C63714C466D66495D8670A484689370
+CopyrightNotice=Simon Sejer Nielsen 2018
+
