--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Static/Levels/FirstPersonExampleMap.FirstPersonExampleMap
+EditorStartupMap=/Game/Dynamic/Levels/InfiniteRunnerLevel.InfiniteRunnerLevel
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
@@ -34,6 +34,9 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RecastNavMesh]
+RuntimeGeneration=Dynamic
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
